<resources>
    <string name="app_name">My Application</string>
    <string name="main_menu">Main menu</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="notes">Notes</string>
    <string name="work_time">Work time</string>
    <string name="break_time">Break time</string>
    <string name="work_time_dialog">Work time (min):</string>
    <string name="break_time_dialog">Break time (min):</string>
    <string name="default_time">0:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="set_time">Set times</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="channel_name">kanava</string>
    <string name="channel_description">kanava22</string>
    <string name="notes_fab_speakable">Open notes</string>
    <string name="work_speakable">Start or stop work timer</string>
    <string name="break_speakable">Start or stop break timer</string>
    <string name="search_icon_description">Search icon</string>
    <string name="search_notes_hint">Search notes</string>
    <string name="notes_hint">Type here</string>
</resources>