<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer">

    <TextView
        android:id="@+id/WorkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/work_time"
        android:textSize="23sp"
        android:typeface="normal"/>

    <TextView
        android:id="@+id/PomoCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/WorkTime"
        android:layout_alignTop="@id/WorkTime"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/default_time"
        android:textSize="20sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/BreakTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/WorkTime"
        android:layout_marginTop="120dp"
        android:layout_alignStart="@id/WorkTime"
        android:fontFamily="sans-serif-medium"
        android:text="@string/break_time"
        android:textSize="23sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/BreakCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/BreakTime"
        android:layout_alignTop="@id/BreakTime"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/default_time"
        android:textSize="20sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/PomoStartPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/PomoCountDown"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="140dp"
        android:contentDescription="@string/work_speakable"
        android:onClick="PomoStartPauseClicked"
        android:text="@string/start" />

    <Button
        android:id="@+id/BreakStartPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/PomoStartPause"
        android:layout_alignBaseline="@id/BreakCountDown"
        android:contentDescription="@string/break_speakable"
        android:onClick="BreakStartPauseClicked"
        android:text="@string/start" />

    <Button
        android:id="@+id/SetTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/BreakCountDown"
        android:layout_alignStart="@id/BreakCountDown"
        android:layout_marginTop="100dp"
        android:onClick="DialogOpener"
        android:text="@string/set_time" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notesFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:contentDescription="@string/notes_fab_speakable"
        android:focusable="true"
        android:onClick="notes"
        app:srcCompat="@android:drawable/ic_input_get" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_alignBottom="@id/notesFAB"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        android:onClick="settings"
        app:srcCompat="@drawable/baseline_settings_24" />

</RelativeLayout>