<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/work_time_dialog" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignStart="@id/textView7"
        android:layout_alignTop="@id/textView7"
        android:text="@string/break_time_dialog" />

    <EditText
        android:id="@+id/PomoT"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/textView7"
        android:layout_alignStart="@id/textView7"
        android:layout_marginStart="110dp"
        android:ems="10"
        android:hint="@string/work_time"
        android:inputType="number" />

    <EditText
        android:id="@+id/BreakT"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignBaseline="@id/textView8"
        android:layout_alignStart="@id/PomoT"
        android:ems="10"
        android:hint="@string/break_time"
        android:inputType="number" />
</RelativeLayout>