<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes">

    <TextView
        android:id="@+id/notesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/notes"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/notesSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/notesHeader"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_icon_description"
            android:src="@drawable/baseline_search_24"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:background="@null"
            android:hint="@string/search_notes_hint"
            android:importantForAutofill="no"
            android:inputType="text" />
    </LinearLayout>
</RelativeLayout>